fix: reset the page number when changing size in our custom data table

--- a/app/components/k-data-table.hbs
+++ b/app/components/k-data-table.hbs
@@ -93,7 +93,7 @@
       <Auk::Toolbar::Item>
         <WebComponents::AuPageSize
           @selectedSize={{@size}}
-          @onChange={{@onChangeSize}}
+          @onChange={{this.onChangeSize}}
           data-test-number-pagination-size
         />
       </Auk::Toolbar::Item>
