Revert "fix: reset the page number when changing size in our custom data table"
This reverts commit d86c1d8c276b4caa2e336917f8837930c9e32371.

--- a/app/components/k-data-table.hbs
+++ b/app/components/k-data-table.hbs
@@ -93,7 +93,7 @@
       <Auk::Toolbar::Item>
         <WebComponents::AuPageSize
           @selectedSize={{@size}}
-          @onChange={{this.onChangeSize}}
+          @onChange={{@onChangeSize}}
           data-test-number-pagination-size
         />
       </Auk::Toolbar::Item>
