chore: make signature pill clickable using argument
By default the pill will remain clickable

--- a/app/templates/signatures/ongoing.hbs
+++ b/app/templates/signatures/ongoing.hbs
@@ -94,6 +94,7 @@
             <SignaturePill
               @piece={{signMarkingActivity.piece}}
               @signMarkingActivity={{signMarkingActivity}}
+              @isClickable={{false}}
             />
           </td>
         {{/let}}
