--- a/app/components/signature-pill.hbs
+++ b/app/components/signature-pill.hbs
@@ -5,7 +5,7 @@
     <AuPill
       @icon="sign"
       @skin={{this.skin}}
-      @href={{this.data.value.signingHubUrl}}
+      @href={{if this.isClickable this.data.value.signingHubUrl}}
       target="_blank"
     >
       {{this.data.value.status.label}}
