add argument to statusfilter to exclude certain statuses

--- a/app/templates/signatures/ongoing.hbs
+++ b/app/templates/signatures/ongoing.hbs
@@ -13,6 +13,7 @@
             <Signatures::StatusFilter
               @selectedStatusIds={{this.statuses}}
               @onChange={{this.onChangeStatus}}
+              @excludedStatuses={{this.excludedStatuses}}
             />
           </div>
           {{#if this.currentSession.isAdmin}}
