--- a/app/templates/agenda/agendaitems/agendaitem/documents.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/documents.hbs
@@ -44,6 +44,7 @@
       @onAddPiece={{perform this.addPiece}}
       @didDeleteContainer={{this.refresh}}
       @isEditable={{true}}
+      @decisionActivity={{this.decisionActivity}}
     />
   {{else}}
     <div class="auk-u-mt-2">
