--- a/app/components/documents/document-card-list.hbs
+++ b/app/components/documents/document-card-list.hbs
@@ -10,6 +10,7 @@
         @didDeleteContainer={{@didDeleteContainer}}
         @onOpenUploadModal={{@onOpenUploadModal}}
         @onAddPiece={{@onAddPiece}}
+        @decisionActivity={{@decisionActivity}}
       />
     </div>
   {{else}}
