--- a/app/components/agenda/printable-agenda/list-section/item-group.hbs
+++ b/app/components/agenda/printable-agenda/list-section/item-group.hbs
@@ -30,7 +30,7 @@
           />
         </div>
       </div>
-      {{#if first.pieces}}
+      {{#if (await first.pieces)}}
         <Agenda::PrintableAgenda::ListSection::ItemGroup::Item::DocumentList
           @pieces={{first.pieces}}
         />
@@ -45,7 +45,7 @@
             @item={{agendaitem}}
           />
         </div>
-        {{#if @item.pieces}}
+        {{#if (await @item.pieces)}}
           <Agenda::PrintableAgenda::ListSection::ItemGroup::Item::DocumentList
             @pieces={{agendaitem.pieces}}
           />
