op te starten pill links to op te starten view (without sidebar open)

--- a/app/components/signature-pill.hbs
+++ b/app/components/signature-pill.hbs
@@ -11,7 +11,11 @@
       {{this.data.value.status.label}}
     </AuPill>
   {{else}}
-    <AuPill @icon="sign" @skin={{this.skin}}>
+    <AuPill 
+      @icon="sign" 
+      @skin={{this.skin}}
+      @route={{if (and this.isClickable this.data.value.route) this.data.value.route}}
+      >
       {{this.data.value.status.label}}
     </AuPill>
   {{/if}}
