--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -293,6 +293,7 @@
 {{#if this.isEditingPiece}}
   <Documents::DocumentCard::EditModal
     @piece={{this.piece}}
+    @signFlow={{this.signFlow}}
     @onCancel={{toggle "isEditingPiece" this}}
     @onSave={{toggle "isEditingPiece" this}}
   />
