feat: be more lenient with edit dropdown, but hide actions contextually
Uploading a new version of a piece with a sign flow in the subcase route
is now hidden (because we lack the decision activity to recreate the
sign flow), but the rest of the dropdown is still available.

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -193,7 +193,7 @@
                     {{t "create-new-version"}}
                   </AuButton>
                 {{/if}}
-                {{#if (not @hideUpload)}}
+                {{#if this.mayShowUploadNewVersion}}
                   <AuButton
                     data-test-document-upload-new-piece
                     @skin="link"
