feat: add message if no mandatees

--- a/app/templates/settings/organizations/organization.hbs
+++ b/app/templates/settings/organizations/organization.hbs
@@ -129,6 +129,12 @@
                       </AuButton>
                     </td>
                   </tr>
+                  {{else}}
+                  <tr>
+                    <td>
+                      {{t "no-linked-mandatees"}}
+                    </td>
+                  </tr>
                 {{/each}}
               </:body>
             </AuTable>
