fix: autocomplete problem

--- a/app/templates/settings/organizations/organization.hbs
+++ b/app/templates/settings/organizations/organization.hbs
@@ -113,7 +113,7 @@
                     <td
                       data-test-route-settings---organization-technical-info-row-mandatee
                     >
-                      <Mandatee::NameWithRange @mandatee="mandatee" />
+                      <Mandatee::NameWithRange @mandatee=mandatee />
                     </td>
                     <td class="au-u-text-right">
                       <AuButton
