fix: add moustaches

--- a/app/components/mandatees/mandatee-selector.hbs
+++ b/app/components/mandatees/mandatee-selector.hbs
@@ -18,7 +18,7 @@
       @onChange={{@onSelectMandatee}}
       as |mandatee|
     >
-      <Mandatee::NameWithRange @mandatee=mandatee />
+      <Mandatee::NameWithRange @mandatee={{mandatee}} />
     </PowerSelectMultiple>
   {{else}}
     <PowerSelect
