--- a/app/components/documents/batch-details/batch-editing-row.hbs
+++ b/app/components/documents/batch-details/batch-editing-row.hbs
@@ -26,13 +26,12 @@
   </td>
   {{#if (and @isSignaturesEnabled @decisionActivity)}}
     <td>
-      <AuButton
+      <AuToggleSwitch
         @skin="primary"
-        @disabled={{(or this.isDisabled this.isSignMarkingDisabled)}}
-        {{on "click" (fn this.setMarkedForSignature true)}}
-      >
-        {{t "present-for-signing"}}
-      </AuButton>
+        @label={{t "present-for-signing"}}
+        @onChange={{fn this.setMarkedForSignature}}
+        @disabled={{or this.isDisabled this.isSignMarkingDisabled}}
+      />
     </td>
   {{/if}}
   <td class="auk-u-text-align--right">
