KAS-4199 handle sad flows in component with reload instead of router refresh

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -290,7 +290,7 @@
   <Documents::DocumentCard::EditModal
     @piece={{this.piece}}
     @signFlow={{this.signFlow}}
-    @onCancel={{toggle "isEditingPiece" this}}
+    @onCancel={{this.cancelEditPiece}}
     @onSave={{toggle "isEditingPiece" this}}
   />
 {{/if}}
