--- a/app/templates/settings/organizations/organization.hbs
+++ b/app/templates/settings/organizations/organization.hbs
@@ -278,6 +278,7 @@
 
 {{#if this.showSelectMandateeModal}}
   <Mandatees::MandateesSelectorModal
+    @excludeMandatees={{this.linkedMandatees}}
     @onClose={{fn (set this "showSelectMandateeModal" false)}}
     @onAdd={{this.linkMandatee}}
   />
