hide edit dropdown in documentcard when creating or deleting signflow

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -216,7 +216,7 @@
                 {{#if this.mayCreateSignMarkingActivity}}
                   <AuButton
                     @skin="link"
-                    {{on "click" this.markDocumentForSigning}}
+                    {{on "click" this.markDocumentForSigning.perform}}
                     role="menuitem"
                   >
                     {{t "present-for-signing"}}
