Show loader when changing signFlow

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -156,7 +156,7 @@
             {{/unless}}
           </Group.Item>
           {{#if this.signaturesEnabled}}
-            {{#if this.loadSignatureRelatedData.isRunning}}
+            {{#if this.showSignatureLoader}}
               <Group.Item>
                 <div
                   class="auk-loader au-u-margin-left-small"
