--- a/app/components/signatures/create-sign-flow.hbs
+++ b/app/components/signatures/create-sign-flow.hbs
@@ -33,16 +33,19 @@
     </Auk::Toolbar>
   </Auk::Panel::Header>
   <Auk::Panel::Body class="auk-u-p-0">
-    <Auk::List @bordered={{true}}>
+    <AuList
+      @divider={{true}}
+      as |Item|
+    >
       {{#if this.loadSigners.isPending}}
-        <Auk::List::Item>
+        <Item class="au-u-padding-small">
           <Auk::Loader />
-        </Auk::List::Item>
+        </Item>
       {{else}}
         {{#each this.signers as |signer|}}
-          <Auk::List::Item
+          <Item
+            class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center au-u-padding-small"
             data-test-signatures-create-sign-flow-signers-item
-            class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center"
           >
             {{signer.person.fullName}}
             <AuButton
@@ -55,14 +58,14 @@
             >
               {{t "delete"}}
             </AuButton>
-          </Auk::List::Item>
+          </Item>
         {{else}}
-          <Auk::List::Item>
+          <Item class="au-u-padding-small">
             {{t "no-signers-selected"}}
-          </Auk::List::Item>
+          </Item>
         {{/each}}
       {{/if}}
-    </Auk::List>
+    </AuList>
   </Auk::Panel::Body>
 </Auk::Panel>
 <Auk::Panel class="auk-u-mt-4">
@@ -90,11 +93,14 @@
     </Auk::Toolbar>
   </Auk::Panel::Header>
   <Auk::Panel::Body class="auk-u-p-0">
-    <Auk::List @bordered={{true}}>
+    <AuList
+      @divider={{true}}
+      as |Item|
+    >
       {{#each this.approvers as |approver|}}
-        <Auk::List::Item
+        <Item
+          class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center au-u-padding-small"
           data-test-signatures-create-sign-flow-approvers-item
-          class="auk-o-flex--justify-between"
         >
           <Auk::AbbreviatedText @text={{approver}} @maxLength={{35}} />
           <AuButton
@@ -107,13 +113,13 @@
           >
             {{t "delete"}}
           </AuButton>
-        </Auk::List::Item>
+        </Item>
       {{else}}
-        <Auk::List::Item>
+        <Item class="au-u-padding-small">
           {{t "no-approvers-selected"}}
-        </Auk::List::Item>
+        </Item>
       {{/each}}
-    </Auk::List>
+    </AuList>
   </Auk::Panel::Body>
 </Auk::Panel>
 <Auk::Panel class="auk-u-mt-4">
@@ -141,11 +147,14 @@
     </Auk::Toolbar>
   </Auk::Panel::Header>
   <Auk::Panel::Body class="auk-u-p-0">
-    <Auk::List @bordered={{true}}>
+    <AuList
+      @divider={{true}}
+      as |Item|
+    >
       {{#each this.notificationAddresses as |notificationAddress|}}
-        <Auk::List::Item
+        <Item
+          class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center au-u-padding-small"
           data-test-signatures-create-sign-flow-notification-adresses-item
-          class="auk-o-flex--justify-between"
         >
           <Auk::AbbreviatedText @text={{notificationAddress}} @maxLength={{35}} />
           <AuButton
@@ -158,13 +167,13 @@
           >
             {{t "delete"}}
           </AuButton>
-        </Auk::List::Item>
+        </Item>
       {{else}}
-        <Auk::List::Item>
+        <Item class="au-u-padding-small">
           {{t "no-notification-addresses-selected"}}
-        </Auk::List::Item>
+        </Item>
       {{/each}}
-    </Auk::List>
+    </AuList>
   </Auk::Panel::Body>
 </Auk::Panel>
 
