--- a/app/templates/mock-login.hbs
+++ b/app/templates/mock-login.hbs
@@ -3,9 +3,9 @@
   <div class="auk-scroll-wrapper__body">
     <div class="auk-u-p-4">
       <div class="auk-o-flex auk-o-flex--horizontal-center">
-        <div class="auk-content auk-u-maximize-width auk-u-max-width-xlarge">
+        <div class="auk-u-maximize-width auk-u-max-width-xlarge">
           <div class="auk-u-my-4">
-            <h4 class="auk-u-mb-2">Aanmelden als bepaald profiel (generiek)</h4>
+            <h5 class="au-u-h5 au-u-medium auk-u-mb-2">Aanmelden als bepaald profiel (generiek)</h5>
             <p class="auk-u-mb-4">Kies een type gebruiker om mee aan te melden:</p>
             <div class="auk-panel auk-u-mb-8">
               <MockLogin as |login|>
@@ -29,9 +29,13 @@
                   {{/if}}
                 {{/if}}
                 {{#if this.model.length}}
-                  <ul class="auk-list auk-list--view" data-test-mock-login-list>
+                  <AuList
+                    class="auk-u-mb"
+                    data-test-mock-login-list
+                    as |Item|
+                  >
                     <login.each-account @accounts={{this.model}} as |account|>
-                      <Auk::List::Item>
+                      <Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center au-u-padding-small">
                         <div class="auk-u-mx-2">
                           <span>{{account.user.firstName}} {{account.user.lastName}}</span>
                         </div>
@@ -42,9 +46,9 @@
                         >
                           {{t "login"}}
                         </AuButton>
-                      </Auk::List::Item>
+                      </Item>
                     </login.each-account>
-                  </ul>
+                  </AuList>
                 {{else}}
                   Geen accounts gevonden.
                 {{/if}}
