fix: don't reload whole agendaitems route when searching
Full reload (and showing the loading state) means that we de-render the
search field and that users can't automatically keep typing.

This commit should still preserve the fix intended in KAS-4129, though
without making use of router.transitionTo and just using the
refreshModel behaviour of the queryParams again. Setting filter as a
tracked field instead of using `set()` seems to fix the behaviour.

--- a/app/templates/agenda/agendaitems.hbs
+++ b/app/templates/agenda/agendaitems.hbs
@@ -23,7 +23,11 @@
     </div>
   </div>
   <div class="auk-panel-layout__main-content">
-    {{outlet}}
+    {{#if this.isLoading}}
+      <Auk::Loader @message={{t "agenda-loading"}} />
+    {{else}}
+      {{outlet}}
+    {{/if}}
   </div>
 {{else}}
   <div
@@ -36,7 +40,9 @@
         @onSearch={{this.searchAgendaitems}}
       />
       <div class="auk-scroll-wrapper__body auk-scroll-wrapper__body--vertical auk-u-hidden@print">
-        {{#if this.loadDocuments.isRunning}}
+        {{#if this.isLoading}}
+          <Auk::Loader @message={{t "agenda-loading"}} />
+        {{else if this.loadDocuments.isRunning}}
           <Auk::Loader @message={{this.documentLoadingMessage}} />
         {{else}}
           <Agenda::AgendaOverview
