chore: change minister to mandatee

--- a/app/templates/settings/users/user.hbs
+++ b/app/templates/settings/users/user.hbs
@@ -144,7 +144,7 @@
             <AuToolbar class="auk-u-maximize-width" as |Group|>
               <Group>
                 <h4 data-test-route-settings---user-technical-info class="auk-panel__title">
-                  {{t "minister"}}
+                  {{t "mandatee"}}
                 </h4>
               </Group>
               <Group>
