chore: pass a regular array to sort-by to prevent call to toArray

--- a/app/components/publications/publication/case/mandatees/mandatees-panel.hbs
+++ b/app/components/publications/publication/case/mandatees/mandatees-panel.hbs
@@ -21,7 +21,7 @@
         </Auk::Toolbar::Group>
       </Auk::Toolbar>
     </Auk::Panel::Header>
-    {{#if (await @publicationFlow.mandatees)}}
+    {{#if this.mandatees.value}}
       <Auk::Panel::Body @noPadding={{true}}>
         <table class="auk-table">
           <thead>
@@ -32,7 +32,7 @@
           </thead>
           <tbody>
             {{#each
-              (sort-by "priority" @publicationFlow.mandatees)
+              (sort-by "priority" this.mandatees.value)
               as |mandatee|
             }}
               <tr data-test-mandatees-panel-row>
