chore: replace deprecated usage of label in AuToggleSwitch

--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -54,10 +54,11 @@
         {{else}}
           <AuToggleSwitch
             @skin="primary"
-            @label={{t "present-for-signing"}}
             @checked={{@row.markedForSignature}}
             @onChange={{fn @row.setMarkedForSignature}}
-          />
+          >
+            {{t "present-for-signing"}}
+          </AuToggleSwitch>
       {{/if}}
     </td>
   {{/if}}
