--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -27,11 +27,12 @@
     {{else if this.canManageSignFlow}}
       <AuToggleSwitch
         @skin="primary"
-        @label={{t "present-for-signing"}}
         @checked={{this.hasMarkedSignFlow}}
         @onChange={{fn this.markForSignFlow.perform}}
         @disabled={{this.markForSignFlow.isRunning}}
-      />
+      >
+        {{t "present-for-signing"}}
+      </AuToggleSwitch>
     {{else}}
       <AuAlert
         @skin="warning"
