--- a/app/components/utils/toaster/toast.hbs
+++ b/app/components/utils/toaster/toast.hbs
@@ -1,11 +1,10 @@
-<ClickOutside @onClickOutside={{@onClose}}>
-  <WebComponents::VlAlert
-    class="vl-alert-relative vl-alert-relative--center-mid"
-    aria-live="assertive"
-    @type={{@type}}
-    @title={{@title}}
-    @message={{@message}}
-    @closeable={{true}}
-    @onClose={{@onClose}}
-  />
-</ClickOutside>
+<WebComponents::VlAlert
+  class="vl-alert-relative vl-alert-relative--center-mid"
+  aria-live="assertive"
+  @type={{@type}}
+  @title={{@title}}
+  @message={{@message}}
+  @closeable={{true}}
+  @onClose={{@onClose}}
+  {{on-click-outside @onClose}}
+/>
