--- a/app/components/meeting/edit-meeting-modal.hbs
+++ b/app/components/meeting/edit-meeting-modal.hbs
@@ -47,7 +47,10 @@
     {{/if}}
     {{!Publicatiedatum}}
     <div class="auk-u-mb-2">
-      <div data-test-edit-meeting-document-publication-date class="auk-form-group">
+      <div
+        data-test-edit-meeting-document-publication-date
+        class="auk-form-group"
+      >
         <Auk::Label>
           {{t "date-publication-documents"}}
         </Auk::Label>
@@ -76,7 +79,8 @@
               @value={{this.meetingNumber}}
               @disabled={{this.initializeMeetingNumber.isRunning}}
               id="meetingNumberInput"
-              class="auk-input-group--w-medium auk-u-mr-2" {{! TODO: replace `auk-input-group--w-medium` with matching @width argument when it is implemented }}
+              class="auk-input-group--w-medium auk-u-mr-2"
+              {{! TODO: replace `auk-input-group--w-medium` with matching @width argument when it is implemented }}
             />
           {{/unless}}
           <div class="auk-o-flex__item">
@@ -86,7 +90,7 @@
             >
               {{this.numberRepresentation}}
             </div>
-            {{!-- TODO: this button needs to be displayed in a smaller size --}}
+            {{! TODO: this button needs to be displayed in a smaller size }}
             <AuButton
               data-test-edit-meeting-number-representation-edit
               class="auk-u-p-0"
@@ -105,7 +109,8 @@
           <AuInput
             data-test-edit-meeting-number-representation-input
             @value={{this.numberRepresentation}}
-            class="auk-input-group--w-medium auk-u-mr-2" {{! TODO: replace `auk-input-group--w-medium` with matching @width argument when it is implemented }}
+            class="auk-input-group--w-medium auk-u-mr-2"
+            {{! TODO: replace `auk-input-group--w-medium` with matching @width argument when it is implemented }}
           />
           <AuButton
             data-test-edit-meeting-number-representation-save
@@ -116,6 +121,18 @@
           </AuButton>
         </div>
       {{/if}}
+    </div>
+    <div class="auk-u-mb-2">
+      <div class="auk-form-group">
+        <Auk::Label>
+          {{t "secretary-for-meeting"}}
+        </Auk::Label>
+        <Mandatees::MandateeSelector
+          @onSelectMandatee={{fn (mut this.secretary)}}
+          @selectedMandatees={{this.secretary}}
+          @visibleRoles={{this.VISIBLE_ROLES}}
+        />
+      </div>
     </div>
     {{#unless this.isAnnexMeeting}}
       <div class="auk-u-mb-2">
